1999-10-18  K.J. Paradise <kj@sourcegear.com>

	Bug: users 'stan' and 'cartman' both have full read/write access
	to the cvs repository.  'cartman' does a 'cvs admin -l foo.c'. 
	'stan' then does a 'cvs admin -u foo.c'.  The lock wouldn't be 
	removed, and no warning/error would be given.  This is now fixed. 
	* rcs.c:(c.6157) remove caller/user check on the multiple lock 
        detection routines.  Sanity.sh runs with no errors after this fix.
	
1999-10-14  Larry Jones  <larry.jones@sdrc.com>

	Make "cvs admin -e" (with no list of users) work:
	* admin.c (admin): Remove error message.
	(admin_fileproc): If no args for -e, call RCS_delaccess with NULL user.
	* rcs.c (RCS_delaccess): Interpret NULL user as request to delete
	entire access list.
	* sanity.sh (admin-19a-*): Test.

1999-09-29  Larry Jones  <larry.jones@sdrc.com>

	* entries.c (Subdirs_Known): Use entfilename when opening CVSADM_ENTLOG
	like everywhere else.  Although this isn't strictly necessary (since
	we immediately close it again), it keeps the code consistent and fixes
	a bug where an open error reported the wrong file name.

1999-09-16  Larry Jones  <larry.jones@sdrc.com>

	* log.c (log_parse_revlist): Handle peculiar revision specs like
	"-r.", "-r:", and "-r," correctly.  (Thanks to Pavel Roskin
	<pavel_roskin@geocities.com> for submitting a patch, this fix is
	somewhat different.)
	* sanity.sh (log): New tests for above.

1999-09-15  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (basica-8b1): New test to check fix for bad diff options
	causing cvs to crash.

1999-09-02  Larry Jones  <larry.jones@sdrc.com>

	* modules.c (do_module): Handle case where module definition has
	options and special options but no directory; fix potential problems
	running off beginning of string while stripping trailing blanks.
	* sanity.sh (modules2): New tests for above.

1999-08-26  Larry Jones  <larry.jones@sdrc.com>

	* lock.c (lock_name): Remove side-effects from assert() expression